# canasta

./: HANDOFF.md  README.md  TIMELINE.md  canasta-adaptive.desktop  canasta-aggro.desktop  canasta-greedy.desktop  canasta-planner.desktop  canasta-random.desktop  canasta-safe.desktop  canasta.desktop  pyproject.toml  rules.md
docs/: 01-architecture.md  02-game-rules-and-model.md  03-testing.md  04-ai-player-and-seeding.md  05-bot-strength-strategy.md  index.md
src/canasta/: __init__.py  __main__.py  bot_ladder.py  bot_strategies.py  bots.py  card_assets.py  cli.py  engine.py  gui.py  gui.py.bak  hands.py  model.py  rules.py  scoring.py  turns.py
src/canasta/gui/: __init__.py  __main__.py  actions.py  bootstrap.py  bot_runner.py  dialogs.py  layout.py  lifecycle.py  main.py  persistence.py  renderer.py  state.py  theme.py  utilities.py  widgets.py
tests/: test_bot_ladder.py  test_bots.py  test_card_assets.py  test_engine.py  test_gui.py  test_model.py  test_rules.py
