[project]
name = "canasta"
version = "0.1.14"
description = "Learn-by-building standalone Canasta in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
]

[project.scripts]
canasta = "canasta.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canasta"]
