[project]
name = "canasta"
version = "1.4.13"
description = "Learn-by-building standalone Canasta in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "platformdirs>=4.3.6,<5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "ruff>=0.15.12",
]

[project.scripts]
canasta = "canasta.cli:main"
canasta-gui = "canasta.gui:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canasta"]
